--- a/app/templates/components/timer-component.hbs
+++ b/app/templates/components/timer-component.hbs
@@ -1,3 +1,3 @@
 <div class="timer" id="divFloatTimer" {{action "init"}}>
-    Time Left : {{dispmin}}:{{seconds}}
+    Time Left : {{minutes}}:{{seconds}}
 </div>
