--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,12 +5,12 @@
     <div class="collapse navbar-collapse" id="menu-collapse">
         <span class="logo"> </span>
         <ul class="navbar-nav">
-            <li> {{ link-to 'Home' 'home'}} ></li>
+           <li> {{ link-to 'Home' 'home'}} </li>
             <!--<li>{{ link-to 'Test' 'test' disabled="true"}}</li>-->
-            {{ link-to 'Take a Challenge' 'challenge' }}
+           {{ link-to 'Take a Challenge' 'challenge' }}
             <!--<li>{{ link-to 'Report' 'report' invokeAction='reportCard' disabled="true"}}</li>
             <li>{{ link-to 'Addquestion' 'addquestion' disabled="true"}}</li>-->
-        </ul>
+         </ul>
     </div>
 
 </nav>
@@ -23,5 +23,5 @@
                 {{outlet}}
             </div>
         </div>
-    </div>
+ </div>
 </div>
