--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -21,14 +21,19 @@
 <br>
 <br>
 <div class="text-color">
+    <div class="home-box-body1 ">
     <div class="align-q">
         <div class="test-head">
            
-            <h4>Please Start With {{testType}} Test..!!</h4>
-        </div>
-        <br> {{#each model.message as |item|}} {{question-comp Ques=item}}
+            <h3>Please Start With {{testType}} Test..!!</h3>
+       </div>
+        <br>{{#each model.message as |item|}} {{question-comp Ques=item}}
+                 
         <br> {{/each}}
+    
+    </div> 
     </div>
+    <br>
     <div class="btn-calscore">
         <button type="button" class="btn btn-primary" {{action "toggleModal"}}>Calculate Score</button>
     </div>
