--- a/app/templates/agreement.hbs
+++ b/app/templates/agreement.hbs
@@ -30,7 +30,7 @@
     <li class="agreementNoClr"> Read the notes above titled “Befor beggining the test” and “During the test”.</li>
     <li class="agreementNoClr"> Login in portal to start test. </li>
     <li class="agreementNoClr"> Do not start test until you are absolutely ready to start! </li>
-    <li class="agreementNoClr"> You will have 20 minutes to complete “Fundamental” test and  30 minutes to complete “java” and “language” test. </li>
+    <li class="agreementNoClr"> You will have 30 minutes to complete “Fundamental” , “java” and “language” test. </li>
     <li class="agreementNoClr"> The exam must  be completed in one sitting.You can only open it once. </li>
     <li class="agreementNoClr"> Answer all the questions in test. </li>
     <li class="agreementNoClr"> No negative marking. </li>
