--- a/app/templates/test.hbs
+++ b/app/templates/test.hbs
@@ -19,7 +19,7 @@
 </div>
 </div>
  <div class = "logoutT">
-<button type="button" class="btn btn-default btn-sm"{{action "log_out1"}}>
+<button type="button" class="btn btn-default btn-sm,nav navbar-nav navbar-right"{{action "log_out1"}}>
           <span class="glyphicon glyphicon-log-out"></span> Log out</button>
  </div>
 
