--- a/app/templates/agreement.hbs
+++ b/app/templates/agreement.hbs
@@ -46,7 +46,7 @@
 
     {{#if selectedvalue}} 
         <div class="submitagreement">
-    <button type="button" class="btn btn-primary" {{action "submit"}}>
+    <button type="button" class="btn btn-success" {{action "submit"}}>
         <span class="glyphicon glyphicon-submit"></span> Submit</button>
 </div>
 
