--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -36,7 +36,7 @@
     </div>
     <br>
     <div class="btn-calscore">
-        <button type="button" class="btn btn-primary" {{action "toggleModal"}}>Calculate Score</button>
+        <button type="button" class="btn btn-success" {{action "toggleModal"}}>Calculate Score</button>
     </div>
     <a href="#" class="go-top">Scroll to Top</a> 
     {{#if isShowingModal}} {{#modal-dialog targetAttachment="center" translucentOverlay=true}}
