--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="btn-taketest">
-                    <button type="button" class="btn btn-primary" {{action 'registerUser'}}> Submit </button>
+                    <button type="button" class="btn btn-success" {{action 'registerUser'}}> Submit </button>
                 </div>
                
     {{#if showRegResponse}} {{#modal-dialog targetAttachment="center" translucentOverlay=true}}
