--- a/app/templates/test.hbs
+++ b/app/templates/test.hbs
@@ -1,10 +1,10 @@
-<div class="home-background">
+<div class="home-background">  
 <br>
 <div class="form-group-test">
 
     <div>
         {{token}}
-        <h3 class="text-color">Choose Your Test..!!</h3><br><br>
+        <h2 class="text-color">Choose Your Test..!!</h2><br><br>
         <br> {{select-component dropdowntype="test" listitem=testlist selecteditemlist=selectedtest}}
         <span class="errmsg">{{errorMessage}}</span>
     </div>
@@ -13,7 +13,7 @@
     <br>
     <br>
 
-    <button type="button" class="btn btn-primary" {{action 'questionlist'}}>Start Test</button>
+    <button type="button" class="btn btn-success" {{action 'questionlist'}}>Start Test</button>
 
 
 </div>
