--- a/app/templates/components/question-comp.hbs
+++ b/app/templates/components/question-comp.hbs
@@ -3,6 +3,6 @@
 
 {{#each Ques.choices as |item|}}
 <br>
-<br> {{#radio-button radioClass = "radioClass" value = item name = Ques.id groupValue=Ques.userAnswer}} {{item}} {{/radio-button}} {{/each}}
+ {{#radio-button radioClass = "radioClass" value = item name = Ques.id groupValue=Ques.userAnswer}} {{item}} {{/radio-button}} {{/each}}
 
 <br> selected value is : {{Ques.userAnswer}}
