--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -34,8 +34,8 @@
             </div>
             {{errormessage}}
             <div class="btngroup">
-               <button type="button" class="btn btn-primary" {{action 'login'}} disabled={{v-get this 'isInvalid'}}> Sign In</button> 
-               <button type="button" class="btn btn-primary" {{action 'register'}}> Sign Up</button>
+               <button type="button" class="btn btn-success" {{action 'login'}} disabled={{v-get this 'isInvalid'}}> Sign In</button> 
+               <button type="button" class="btn btn-success" {{action 'register'}}> Sign Up</button>
             </div>
         </div>
      </div>
