commit changes for home and test page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -120,6 +120,12 @@
 .errmsg {
     color: red;
     position: absolute;
+    top: 30px;
+}
+.errmsgT {
+    color: red;
+
+     margin-right: 25px;
     top: 175px;
 }
 .align-q {
