--- a/app/templates/test.hbs
+++ b/app/templates/test.hbs
@@ -6,7 +6,7 @@
         {{token}}
         <h2 class="text-color">Choose Your Test..!!</h2><br><br>
         <br> {{select-component dropdowntype="test" listitem=testlist selecteditemlist=selectedtest}}
-        <span class="errmsg">{{errorMessage}}</span>
+        <span class="errmsgT">{{errorMessage}}</span>
     </div>
     <br>
     <br>
