next test displayed

--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -27,14 +27,15 @@
             <h4>Please Start With {{testType}} Test..!!</h4>
         </div>
         <br> {{#each model.message as |item|}}
-         {{question-comp  Ques=item}}
+                {{question-comp  Ques=item}}
         <br> {{/each}}
     </div>
     <div class="btn-calscore">
         <button type="button" class="btn btn-primary" {{action "toggleModal"}}>Calculate Score</button>
     </div>
     <a href="#" class="go-top">Scroll to Top</a> 
-    {{#if isShowingModal}} {{#modal-dialog targetAttachment="center" translucentOverlay=true}}
+    {{#if isShowingModal}} 
+    {{#modal-dialog  close="toggleModal"  targetAttachment="center" translucentOverlay=true}}
     <div>
         congratulations..!!
         <br> Your Score Is
@@ -45,7 +46,7 @@
         <br>
     </div>
 <!--<button type="button" class="btn btn-success" {{action "toggleModalOk"}}>OK</button>-->
-        <button type="button" class="btn btn-success" {{action "toggleModalNext"}}>Next Test</button>
+        <button type="button" class="btn btn-success"    {{action "toggleModalNext"}}>Next Test</button>
     {{/modal-dialog}} 
     {{/if}}
     {{#if showTimer}}
