--- a/app/templates/test.hbs
+++ b/app/templates/test.hbs
@@ -3,7 +3,7 @@
 <div class="form-group-test">
 
     <div>
-        {{token}}
+        {{!{{token}}
         <h3 class="text-color">Choose Your Test..!!</h3><br><br>
         <br> {{select-component dropdowntype="test" listitem=testlist selecteditemlist=selectedtest}}
         <span class="errmsg">{{errorMessage}}</span>
