--- a/app/templates/agreement.hbs
+++ b/app/templates/agreement.hbs
@@ -12,6 +12,7 @@
     <li class="agreementNoClr"> Close all other tabs before starting test. </li>
     <li class="agreementNoClr"> Maximize your screen window before starting test to get proper view. </li>
     <li class="agreementNoClr"> Do not change selection  of test once you have selected test,it will not give u desired test.</li>
+    <li class="agreementNoClr"> Login in portal to start test. </li>
 </ol>
 </p>
  
@@ -29,7 +30,6 @@
 <b> Instructions for accessing test </b>
 <ol type="1">
     <li class="agreementNoClr"> Read the notes above titled “Befor beggining the test” and “During the test”.</li>
-    <li class="agreementNoClr"> Login in portal to start test. </li>
     <li class="agreementNoClr"> Do not start test until you are absolutely ready to start! </li>
     <li class="agreementNoClr"> You will have 30 minutes to complete “Fundamental” , “java” and “language” test. </li>
     <li class="agreementNoClr"> The exam must  be completed in one sitting.You can only open it once. </li>
@@ -39,7 +39,7 @@
 </ol>
 </p>
 
-<p> If you face any issues during test you can contact us. </p>
+<p><strong> If you face any issues during test you can contact us. </strong></p>
 <p align="center">    All the Best !! </p>
 
     {{input type="checkbox" checked=selectedvalue}}
