after clear bugs

--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -45,7 +45,7 @@
         congratulations..!!
         <br> Your {{testType}} Score Is   <br>
         <div class="score">
-            {{score}}/10
+            {{score}}/{{outof}}
            </div>
         <br>
     </div>
