report page changes

--- a/app/templates/report.hbs
+++ b/app/templates/report.hbs
@@ -1,5 +1,10 @@
 <br>
 
+
+<div class = "logoutT">
+<button type="button" class="btn btn-default btn-sm,nav navbar-nav navbar-right"{{action "log_out1"}}>
+          <span class="glyphicon glyphicon-log-out"></span> Log out</button>
+ </div>
 <div class="col-sm-12">
 
 
