--- a/app/templates/agreement.hbs
+++ b/app/templates/agreement.hbs
@@ -1,5 +1,6 @@
 <br>
 <br>
+<div class="padding">
 <div class= "Instructions">
 <h3>Instructions:</h3>
 
@@ -44,4 +45,6 @@
  
 
 <!--<input type="checkbox">I agree with terms and conditions<br><br> -->
+</div>
+
 </div>
