--- a/app/templates/instructions.hbs
+++ b/app/templates/instructions.hbs
@@ -1,3 +1,8 @@
+<br>
+<br>
+<br>
+
+<div class="padding">       
 <div class= "Instructions">
     <br>
     <br>
@@ -7,7 +12,7 @@
 <b>Before beggining the Test </b>
    
 <ol type="1">
-    <li class="agreementNoClr"> Make sure you are register yourself with portal.</li>
+    <li class="agreementNoClr" > Make sure you are register yourself with portal.</li>
     <li class="agreementNoClr"> After Register,Login into portal. </li>
     <li class="agreementNoClr"> Close all other tabs before starting test. </li>
     <li class="agreementNoClr"> Maximize your screen window before starting test to get proper view. </li>
@@ -19,7 +24,13 @@
 <p><strong>Please read the above Instructions carefully before starting the test</strong></p>
 
 </div>
+<br>
+<br>
+        <br>
 <div class="submitagreement">
     <button type="button" class="btn btn-success" {{action "submit"}}>
-        <span class="glyphicon glyphicon-submit"></span> Submit</button>
+        <span class="glyphicon glyphicon-submit"></span> continue</button>
+        <br>
+        <br>
+</div>
 </div>
