refresh score bug solved

--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -49,7 +49,7 @@
            {{#if score}}
             {{score}}/{{totalQuestions}}
             {{else}}
-            Caluculating
+            Calculating
            {{/if}}
            </div>
         <br>
