--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,12 +2,14 @@
 
     <div class="navbar-header">
     </div>
-    <div class="collapse navbar-collapse" id="menu-collapse">
-        <span class="logo"> </span>
+      <span class="logo"> </span>
+    <div class="collapse navbar-collapse" id="menu-collapse" style="float:right">
+      
         <ul class="navbar-nav">
-           <li> {{ link-to 'Home' 'home'}} </li>
+          <!--<li> {{ link-to 'Home' 'home'}} </li>
             <!--<li>{{ link-to 'Test' 'test' disabled="true"}}</li>-->
-           {{ link-to 'Take a Challenge' 'challenge' }}
+           <li> {{ link-to 'Contact Us' 'home101'}}</li>
+      <!--     {{ link-to 'Take a Challenge' 'challenge' }}
             <!--<li>{{ link-to 'Report' 'report' invokeAction='reportCard' disabled="true"}}</li>
             <li>{{ link-to 'Addquestion' 'addquestion' disabled="true"}}</li>-->
          </ul>
