--- a/app/templates/instructions.hbs
+++ b/app/templates/instructions.hbs
@@ -28,8 +28,8 @@
 <br>
         <br>
 <div class="submitagreement">
-    <button type="button" class="btn btn-success" {{action "submit"}}>
-        <span class="glyphicon glyphicon-submit"></span> continue</button>
+    <button type="button" id="continue" class="btn btn-success" {{action "submit"}}>
+        <span class="glyphicon glyphicon-submit"></span>continue</button>
         <br>
         <br>
 </div>
