--- a/app/templates/instructions.hbs
+++ b/app/templates/instructions.hbs
@@ -22,15 +22,18 @@
 </p>
 <br>
 <p><strong>Please read the above Instructions carefully before starting the test</strong></p>
-
+</div>
 </div>
 <br>
 <br>
         <br>
 <div class="submitagreement">
-    <button type="button" id="continue" class="btn btn-success" {{action "submit"}}>
-        <span class="glyphicon glyphicon-submit"></span>continue</button>
+
+    <button type="button" id="Instructionbutton" class="btn btn-success" {{action "submit"}}>
+        <span class="glyphicon glyphicon-submit"></span> Submit</button>
+
+    <button type="button" class="btn btn-success" {{action "submit"}}>
+        <span class="glyphicon glyphicon-submit"></span> continue</button>
         <br>
         <br>
-</div>
 </div>
