--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -49,7 +49,7 @@
            {{#if score}}
             {{score}}/{{totalQuestions}}
             {{else}}
-            Calculating
+            Calculating...
            {{/if}}
            </div>
         <br>
