heroku end point for gocode

--- a/app/templates/home101.hbs
+++ b/app/templates/home101.hbs
@@ -3,7 +3,7 @@
 <br>
  <div class = "logoutT">
 <button type="button" id="LogInbutton" class="btn btn-default btn-sm,nav navbar-nav navbar-right"{{action "Log_in"}}>
-          <span class="glyphicon glyphicon-log-in"></span> Log in</button>
+          <span class="glyphicon glyphicon-log-in"></span> Log in or Sign Up</button>
  </div>
 <div class="text-center">
 <div class="padding3">
