--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -110,5 +110,5 @@
 {{#if isShowingModal}} {{#modal-dialog targetAttachment="center" translucentOverlay=true}} {{partial "loading-image"}} {{/modal-dialog}} {{/if}}
 <div class="login">
     <button type="button" class="btn btn-default btn-sm" {{action "login1"}}>
-        <span class="glyphicon glyphicon-log-out"></span> Login</button>
+        <span class="glyphicon glyphicon-log-in"></span> Login</button>
 </div>
