--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,10 +7,9 @@
       
         <ul class="navbar-nav">
           <!--<li> {{ link-to 'Home' 'home'}} </li>
-            <!--<li>{{ link-to 'Test' 'test' disabled="true"}}</li>-->
-           <li> {{ link-to 'Contact Us' 'home101'}}</li>
-      <!--     {{ link-to 'Take a Challenge' 'challenge' }}
-            <!--<li>{{ link-to 'Report' 'report' invokeAction='reportCard' disabled="true"}}</li>
+            <!-<li>{{ link-to 'Test' 'test' disabled="true"}}</li>-->
+          <!-- <li> {{ link-to 'Contact Us' 'home101'}}</li>-->      <!--     {{ link-to 'Take a Challenge' 'challenge' }}
+            <!-<li>{{ link-to 'Report' 'report' invokeAction='reportCard' disabled="true"}}</li>
             <li>{{ link-to 'Addquestion' 'addquestion' disabled="true"}}</li>-->
          </ul>
     </div>
