acceptance test chaange

--- a/app/templates/agreement.hbs
+++ b/app/templates/agreement.hbs
@@ -32,7 +32,7 @@
 <p><strong> If you face any issues during test you can contact us. </strong></p>
 <p align="center">    All the Best !! </p>
 
-    {{input type="checkbox" checked=selectedvalue}}
+    {{input type="checkbox" id="Inputcheckbox" checked=selectedvalue}}
      I agree with terms and conditions<br> <br>
 
     {{#if selectedvalue}} 
