--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -98,7 +98,7 @@
             {{message}}
         </div>
         <br>
-        <button type="button"  class="btn btn-success" {{action "regOK"}}>OK</button>
+        <button type="button"  id="ok" class="btn btn-success" {{action "regOK"}}>OK</button>
     </div>
     {{/modal-dialog}} 
     {{/if}}
