--- a/app/templates/programming.hbs
+++ b/app/templates/programming.hbs
@@ -56,6 +56,7 @@
 <!--<button type="button" class="btn btn-success" {{action "toggleModalOk"}}>OK</button>-->
 {{#if toShowNext}}
      <button type="button" class="btn btn-success" {{action "toggleModalNext"}}>Next Test</button>
+     <button type="button" class="btn btn-success" {{action "refresh"}}>Thank you</button>
         {{/if}}
     {{/modal-dialog}} 
 
