--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -24,5 +24,10 @@
                 {{outlet}}
             </div>
         </div>
- </div>
+        <footer class="navbar-footer">
+            <div class="col-md-12 center-align">
+                <p class="text-muted">Copyright &copy; 2017 RapidQube<span style="visibility: hidden; text-align: right;">E - v1.0&nbsp;&nbsp;G - v1.0</span></p>
+            </div>
+        </footer>
+    </div>
 </div>
