add comments to each page

--- a/app/templates/addquestion.hbs
+++ b/app/templates/addquestion.hbs
@@ -24,6 +24,7 @@ var element = document.createElement("input");
 </FORM>-->
 
 
+<!-- To add questions and its options from admin side-->
 
 <div class="Qbackground">
     <div class="addQ-box">
