--- a/app/templates/agreement.hbs
+++ b/app/templates/agreement.hbs
@@ -1,3 +1,4 @@
+<!-- This is agreement page which contain instructions for candidate before test-->
 <br>
 <br>
 <div class="padding">
@@ -34,7 +35,7 @@
 
     {{input type="checkbox" id="Inputcheckbox" checked=selectedvalue}}
      I agree with terms and conditions<br> <br>
-
+<!-- this code is for  showing submit button after clicking on checkbox-->
     {{#if selectedvalue}} 
         <div class="submitagreement">
     <button type="button" id="agreebutton" class="btn btn-success" {{action "submit"}}>
