--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,28 +1,25 @@
+<!-- This code is for navigation bar  -->
 <nav class=" navbar-inverse1 ">
-
-    <div class="navbar-header">
-    </div>
-      <span class="logo"> </span>
-    <div class="collapse navbar-collapse" id="menu-collapse" style="float:right">
-      
-        <ul class="navbar-nav">
-          <!--<li> {{ link-to 'Home' 'home'}} </li>
+   <div class="navbar-header">
+   </div>
+   <span class="logo"> </span>
+   <div class="collapse navbar-collapse" id="menu-collapse" style="float:right">
+      <ul class="navbar-nav">
+         <!--<li> {{ link-to 'Home' 'home'}} </li>
             <!-<li>{{ link-to 'Test' 'test' disabled="true"}}</li>-->
-          <!-- <li> {{ link-to 'Contact Us' 'home101'}}</li>-->      <!--     {{ link-to 'Take a Challenge' 'challenge' }}
+         <!-- <li> {{ link-to 'Contact Us' 'home101'}}</li>-->      <!--     {{ link-to 'Take a Challenge' 'challenge' }}
             <!-<li>{{ link-to 'Report' 'report' invokeAction='reportCard' disabled="true"}}</li>
             <li>{{ link-to 'Addquestion' 'addquestion' disabled="true"}}</li>-->
-         </ul>
-    </div>
-
+      </ul>
+   </div>
 </nav>
-
-
+<!-- this code is to see  next page output -->
 <div class="portalbackground">
-    <div class="container">
-        <div class="subcontainer">
-            <div class="col-sm-12">
-                {{outlet}}
-            </div>
-        </div>
- </div>
+   <div class="container">
+      <div class="subcontainer">
+         <div class="col-sm-12">
+            {{outlet}}
+         </div>
+      </div>
+   </div>
 </div>
