--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -1,3 +1,4 @@
+<!--this is login form-->
 <div class="home-background">
    <div class="home-box">
       <div class="home-box-body">
@@ -15,6 +16,7 @@
                   <div class="input-group-addon">
                      <span class="glyphicon glyphicon-user"></span>
                   </div>
+ 
                   <div class ="error">
                     {{validated-input type="text" id="emailInput" model=this valuePath='email' placeholder='Email Id'}}
                  </div>
@@ -34,7 +36,9 @@
             </div>
             {{errormessage}}
             <div class="btngroup">
+                <!--this signin button to login  -->
                <button type="button" id="SignInbutton"  class="btn btn-success" {{action 'login'}} disabled={{v-get this 'isInvalid' id="SignInbutton"}}> Sign In</button> 
+                <!--this signup button to move to register page -->
                <button type="button" id="SignUpbutton" class="btn btn-success" {{action 'register'}}> Sign Up</button>
                <!--<button type="button" id="SignInbutton" class="btn btn-success" {{action 'login'}}> Sign In</button>-->
 
