add comments to each page

--- a/app/templates/home101.hbs
+++ b/app/templates/home101.hbs
@@ -1,6 +1,8 @@
+<!--this is default page for our project-->
 <br>
 <br>
 <br>
+<!-- this is code to show login buton on navigation bar-->
  <div class = "logoutT">
 <button type="button" id="LogInbutton" class="btn btn-default btn-sm,nav navbar-nav navbar-right"{{action "Log_in"}}>
           <span class="glyphicon glyphicon-log-in"></span> Log in or Sign Up</button>
