--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -1,7 +1,7 @@
 <div class="home-background">
     <div class="register-box">
         <div class="register-box-body">
-
+<!--this is register form-->
             <div class="col-md-6-header">
                 <h3 class="text-color">Register Here...!!!</h3>
             </div>
@@ -90,7 +90,7 @@
                 <div class="btn-taketest">
                     <button type="button" id="Submitregister" class="btn btn-success" {{action 'registerUser'}}> Submit </button>
                 </div>
-               
+        <!--pop-up modal after sucessful registration-->       
     {{#if showRegResponse}} {{#modal-dialog targetAttachment="center" translucentOverlay=true}}
     <div>
         <br>
