--- a/app/templates/components/timer-component.hbs
+++ b/app/templates/components/timer-component.hbs
@@ -1,3 +1,4 @@
+<!-- to show timer components-->
 <div class="timer" id="divFloatTimer" {{action "init"}}>
     Time Left : {{minutes}}:{{seconds}}
 </div>
