--- a/app/templates/components/validated-input.hbs
+++ b/app/templates/components/validated-input.hbs
@@ -1,3 +1,4 @@
+<!-- this component for validating  input fields -->
 {{input type=type value=value placeholder=placeholder class='form-control' name=valuePath}}
 {{#if isValid}}
     <span class="glyphicon glyphicon-ok form-control-feedback"></span>
