--- a/app/templates/test.hbs
+++ b/app/templates/test.hbs
@@ -6,6 +6,7 @@
         {{token}}
         <br>
         <h1 class="text-color">Choose Your Test..!!</h1><br><br>
+        <!--drop down component to select test type-->
         <br> {{select-component dropdowntype="test" listitem=testlist selecteditemlist=selectedtest}}
         <span class="errmsgT">{{errorMessage}}</span>
     </div>
